--- a/src/styles/schedule-calendar.module.css
+++ b/src/styles/schedule-calendar.module.css
@@ -6,7 +6,7 @@
   padding: 0;
   list-style: none;
 }
-.events .ant-badge-status {
+.events li {
   width: 100%;
   overflow: hidden;
   font-size: 12px;
